--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,6 @@ html {
 }
 
 body {
-  background: #0e0e0e;
-  color: whitesmoke;
+  @apply bg-gray-50	dark:bg-gray-900;
+  @apply text-gray-900 dark:text-gray-50;
 }
