--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 * {
-  user-select: none;
+  /* user-select: none; */
   -webkit-tap-highlight-color: transparent;
   margin: 0;
   padding: 0;
