add router transition

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,3 +19,15 @@ body {
   @apply bg-gray-300	dark:bg-gray-900;
   @apply text-gray-900 dark:text-gray-300;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition-duration: 0.2s;
+  transition-property: opacity;
+  transition-timing-function: ease;
+}
+
+.fade-enter,
+.fade-leave-active {
+  opacity: 0;
+}
