--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,12 +12,15 @@
 }
 
 html {
-  /* max-width: 600px; */
 }
 
 body {
   @apply bg-gray-300	dark:bg-gray-900;
   @apply text-gray-900 dark:text-gray-300;
+}
+
+.mobile-view {
+  max-width: 600px;
 }
 
 .fade-enter-active,
